--- a/src/main/resources/templates/fragments/rol/roles.html
+++ b/src/main/resources/templates/fragments/rol/roles.html
@@ -28,7 +28,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     <th>Codigo</th>
                     <th>Nombre</th>
                     <th>Descripcion</th>
-                    <th>Acciones</th>
+                    <th></th><th></th><th></th>
 
                 </tr>
                   </thead> 
@@ -46,13 +46,15 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
          </div>
     </div>
     <script th:inline="javascript">
-        $(document).ready(function () {
-        $('#tablita').DataTable( {
+      $(document).ready(function () {
+            $('#tablita').DataTable( {
         "language": {
             "url": "//cdn.datatables.net/plug-ins/1.10.16/i18n/Spanish.json"
-        }} );    
-            
-            
+        }} );
+    });
+    </script>
+    <script th:inline="javascript">
+     
         if ([[${msg}]] === 3){
         swal({
 
