--- a/src/main/resources/templates/fragments/rol/rolform.html
+++ b/src/main/resources/templates/fragments/rol/rolform.html
@@ -29,15 +29,25 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
   
             <div class="form-group">
                 <label class="col-sm-2 control-label">Nombre de Rol:</label>
-                <div class="col-sm-10">
+                <div class="col-sm-9">
                     <input type="text" class="form-control" required="true" size="100" maxlength="100" th:field="*{nombrerol}"/>
                 </div>
+                 <div class="popup col-sm-1"><b>
+                                    <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('rol')" onmouseout ="javascript:ocultarAyuda('rol')">a</a></b>
+
+                                <span class="popuptext" id="rol">Ingrese el Nombre del Rol. Solo se permiten maximon  100 caracteres. !!</span>
+                            </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-2 control-label">Descripcion de Rol:</label>
-                <div class="col-sm-10">
+                <div class="col-sm-2">
                     <input type="text" class="form-control" required="true" size="30" maxlength="30" th:field="*{descripcionrol}"/>
                 </div>
+                 <div class="popup col-sm-1"><b>
+                                    <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('descripcionn')" onmouseout ="javascript:ocultarAyuda('descripcionn')">a</a></b>
+
+                                <span class="popuptext" id="descripcionn">Ingrese una descripcion al Rol. Solo se permiten maximon  30 caracteres. !!</span>
+                            </div>
             </div>
 <!--            <div class="form-group">
                 <label class="col-sm-2 control-label">EJEMPLO DE DUI:</label>
@@ -45,12 +55,14 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     <input type="text" class="num_dui" />
                 </div>
             </div>-->
-
-            <div class="row">
+ </div>
+            <div class="row" align="center">
             <button type="button" class="btn btn-primary" ><span class="glyphicon glyphicon-arrow-left">Regresar</span><a href="#" th:href="@{/roles/}">Reg</a></button>
                             <button type="submit" class="btn btn-success"><span class="glyphicon glyphicon-floppy-disk"></span>Guardar</button>
                             <button type="reset" class="btn btn-secondary"><span class="glyphicon glyphicon-erase"></span>Limpiar</button>
             </div>
+            </div>
+
         </form>
     </div>
 </div>
