--- a/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitaciones.html
+++ b/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitaciones.html
@@ -24,7 +24,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                         <img src="../../static/image/asistencia.png" width="150" th:src="@{/image/asistencia.png}"/>
        
             <h2>Todas las asistencias Capacitacion</h2>
-           <table id="tablita" class="table table-striped table-bordered" style="width:100%" >
+           <table id="tablita" class="table table-striped table-bordered" >
                     <thead>
                     <tr>
                     <th>Codigo de Asistencia de Capacitacion</th>
@@ -38,7 +38,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                      <th>Telefono</th>
                       <th>Correo</th>
                     
-                    <th>Acciones</th>
+                    <th></th><th></th><th></th>
 
                 </tr>
                 </thead>
@@ -55,14 +55,11 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                         <td th:text="${asistenciacapacitacion.email}">Correo</td>
 
 
-                    
-                            <!--<td> <a th:href="${'./new/asistenciacapacitacion'}" class="btn btn-primary">Nuevo</a></td>-->
+                          <!--<td> <a th:href="${'./new/asistenciacapacitacion'}" class="btn btn-primary">Nuevo</a></td>-->
                         <td><a th:href="${'./show/' + asistenciacapacitacion.codigoasistenciacapacitacion}" class="btn btn-info">Mostrar</a></td>
                       <td>  <a th:href="${'./edit/' + asistenciacapacitacion.codigoasistenciacapacitacion}" class="btn btn-success">Editar</a></td>
                    <td>  <a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${asistenciacapacitacion.codigoasistenciacapacitacion} + '\');'" >Eliminar</a></td>
                     
-                        <!--<a th:href="${'./delete/' + asistenciacapacitacion.codigoasistenciacapacitacion}" class="btn btn-danger">Delete</a>-->
-                </tr>
             </table>
         </div>
     </div>
@@ -106,13 +103,17 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
         
     });
 </script>
-  
-      <script th:inline="javascript">
-        $(document).ready(function () {
+  <script th:inline="javascript">
+      $(document).ready(function () {
             $('#tablita').DataTable( {
         "language": {
             "url": "//cdn.datatables.net/plug-ins/1.10.16/i18n/Spanish.json"
         }} );
+    });
+	</script>
+      <script th:inline="javascript">
+        $(document).ready(function () {
+            
             
     if([[${msg}]]===3){
        swal({
