--- a/src/main/resources/templates/fragments/beneficio/beneficioform.html
+++ b/src/main/resources/templates/fragments/beneficio/beneficioform.html
@@ -34,17 +34,14 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
   
           <div class="form-group">
                 <label class="col-sm-2 control-label">Nombre de Beneficio:</label>
-                <div class="col-sm-9">
+                <div class="col-sm-5">
                     <input type="text" class="form-control" required="true" size="30" maxlength="30" th:field="*{nombrebeneficio}"/>
                 </div>
-                 <div class="col-sm-1 ">
-                        <b><a id="boton" class="btn btn-info" href="#" onmouseover="javascript:mostrarAyuda()" onmouseout ="javascript:ocultarAyuda()">a</a></b>
+              <div class="popup"><b>
+                            <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('nombre')" onmouseout ="javascript:ocultarAyuda('nombre')">a</a></b>
+                        
+                        <span class="popuptext" id="nombre">Ingrese el Nombre del Beneficio solo se admitiran 30 caracteres.!</span>
                     </div>
-                    <div id="ayuda" class="popup ">
-			<b>
-				Ingrese el nombre: Utilice Maximo 30 caracteres
-			</b>
-            </div>
                  </div>
               
             <div class="form-group">
@@ -53,44 +50,35 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     <input type="text" class="form-control" size="100" maxlength="100" required="true" th:field="*{descripcionbeneficio}"/>
                 
                 </div>
-                <div class="col-sm-1 ">
-                        <b><a id="boton" class="btn btn-info" href="#" onmouseover="javascript:mostrarAyuda()" onmouseout ="javascript:ocultarAyuda()">a</a></b>
+              <div class="popup"><b>
+                            <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('descripcion')" onmouseout ="javascript:ocultarAyuda('descripcion')">a</a></b>
+                        
+                        <span class="popuptext" id="descripcion">Ingrese la Descripcion del beneficio, solo se admitiran 5100 caracteres.!</span>
                     </div>
-                    <div id="ayuda1"  class="popup ">
-			<b>
-				Ingrese la Descripcion: Utilice Maximo 100 caracteres
-			</b>
-            </div>
                  </div>
                   
 <div class="form-group">
                 <label class="col-sm-2 control-label">Fecha de inicio:</label>
-                <div class="col-sm-9">
-                    <input type="text" class="form-control"  required="true" th:field="*{fechainiciobeneficio}"/>
+                <div class="col-sm-2">
+                    <input type="text" class="form-control fecha_format" id="fdesde"  required="true" th:field="*{fechainiciobeneficio}"onchange="isDat(this.value,'fdesde');Fechas(this.value,$('#fhasta').val().toString(),'fdesde','fhasta')"/>
                 </div>
-                <div class="col-sm-1 ">
-                        <b><a id="boton" class="btn btn-info" href="#" onmouseover="javascript:mostrarAyuda()" onmouseout ="javascript:ocultarAyuda()">a</a></b>
+               <div class="popup"><b>
+                            <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('fechainicio')" onmouseout ="javascript:ocultarAyuda('fechainicio')">a</a></b>
+                        
+                        <span class="popuptext" id="fechainicio">Seleccione la Fecha Desde, dando clic  en el control.!</span>
                     </div>
-                    <div id="ayuda" class="popup ">
-			<b>
-				Ingrese el Nombre
-			</b>
-            </div>
                  </div>
  
 <div class="form-group">
                 <label class="col-sm-2 control-label">Fecha de Finalización:</label>
-                <div class="col-sm-9">
-                    <input type="text" class="form-control" required="true" th:field="*{fechafinalizarbeneficio}"/>
+                <div class="col-sm-2">
+                    <input type="text" class="form-control fecha_format" id="fhasta" required="true" th:field="*{fechafinalizarbeneficio}"onchange="isDat(this.value,'fhasta');Fechas($('#fdesde').val().toString(),this.value,'fdesde','fhasta')"/>
                 </div>
-                <div class="col-sm-1 ">
-                        <b><a id="boton" class="btn btn-info" href="#" onmouseover="javascript:mostrarAyuda()" onmouseout ="javascript:ocultarAyuda()">a</a></b>
+              <div class="popup"><b>
+                            <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('fechafin')" onmouseout ="javascript:ocultarAyuda('fechafin')">a</a></b>
+                        
+                        <span class="popuptext" id="fechafin">Seleccine la fecha, dando un clic en el control!</span>
                     </div>
-                    <div id="ayuda" class="popup ">
-			<b>
-				Ingrese el Nombre
-			</b>
-            </div>
                  </div>
             
 
@@ -117,16 +105,35 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 
 </body>
 <script>
+     function Fechas(val1,val2,val3,val4){
+                        var foo=ValidarFecha(val1,val2,val3,val4).split(",");;
+                        if(foo[0]!=foo[2]){
+                            swal(foo[1], foo[0]);
+                        }
+                    }
+                    
+                    function isDat(val,id){
+                        var foo=ExisteFecha(val,id).split(",");;
+                        if(foo[0]!=foo[2]){
+                            swal(foo[1], foo[0]);
+                        }
+                    }
     $(document).ready(function () {
-        $('#fechainiciobeneficio').datepicker({
+        $('#fdesde').datepicker({
             dateFormat: 'yy-mm-dd'
         });
 
-        $('#fechafinalizarbeneficio').datepicker({
+        $('#fhasta').datepicker({
             dateFormat: 'yy-mm-dd'
         });
        
     });
+    			function Fechas(idinicial,idfinal){
+                        var foo=document.getElementById(idfinal).value
+                            if( foo != 0){
+                            ValidarFecha(document.getElementById(idinicial).value,document.getElementById(idfinal).value,idinicial,idfinal);
+                        }
+                    }
 </script>
 
 </body>
