--- a/src/main/resources/templates/fragments/beneficio/beneficios.html
+++ b/src/main/resources/templates/fragments/beneficio/beneficios.html
@@ -31,7 +31,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <th>Descripcio&acute;n</th>
                 <th>Fecha Inicio</th>
                  <th>Fecha Fin</th>
-                 <th>Acciones</th>
+                 <th></th><th></th><th></th>
                 
             </tr>
             </thead>
@@ -53,11 +53,17 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 </div>
     </div>
      <script th:inline="javascript">
-        $(document).ready(function () {
-        $('#tablita').DataTable( {
+      $(document).ready(function () {
+            $('#tablita').DataTable( {
         "language": {
             "url": "//cdn.datatables.net/plug-ins/1.10.16/i18n/Spanish.json"
-        }} );    
+        }} );
+    });
+    </script>
+     <script th:inline="javascript">
+        $(document).ready(function () {
+        
+        
     if([[${msg}]]===3){
        swal({
            
