--- a/src/main/resources/templates/fragments/capacitacion/capacitaciones.html
+++ b/src/main/resources/templates/fragments/capacitacion/capacitaciones.html
@@ -30,7 +30,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                          </div>
            <h3 align="center">Listado de Capacitaciones</h3>
       
-       <table id="tablita" class="table table-striped table-bordered" style="width:100%" >
+      <table id="tablita" class="table table-striped table-bordered" >
                     <thead>
             <tr>
                 <th>Código</th>
@@ -50,7 +50,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <th>Tipo Capacitación</th>
                 <th>Estado Capacitación</th>
                 <th>Nombre Capacitador</th>
-               <th align="center">Acciones</th>
+                <th></th><th></th><th></th>
                 
             </tr>
                     </thead>
@@ -67,7 +67,8 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <td th:text="${capacitacion.tipoevento}">Tipo Evento</td>
                 <td th:text="${capacitacion.especialidadevento}">Especialidad</td>
                 <td th:text="${capacitacion.paiscapacitacion}">Pais Capacitacion</td>
-               <td th:text="${#calendars.format(capacitacion.fechacapacitaciondesde, 'dd/MM/yyyy')}">Fecha Desde</td>
+                 <td th:text="${#calendars.format(capacitacion.fechacapacitaciondesde, 'dd/MM/yyyy')}">Fecha Desde</td>
+               <!--<td th:text="${#calendars.format(capacitacion.fechacapacitaciondesde, 'dd/MM/yyyy')}">Fecha Desde</td>-->
                 <!--<td th:text="${capacitacion.fechacapacitaciondesde}">Fecha Capacitacion Desde</td>-->
                  <td th:text="${#calendars.format(capacitacion.fechacapacitacionhasta, 'dd/MM/yyyy')}">Fecha Desde</td>
                 <!--<td th:text="${capacitacion.fechacapacitacionhasta}">Fecha Capacitacion Hasta</td>-->
@@ -93,14 +94,17 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
     </div>  
     </div>
    
-   
-   
-     <script th:inline="javascript">
-       $(document).ready(function () {
+   <script th:inline="javascript">
+      $(document).ready(function () {
             $('#tablita').DataTable( {
         "language": {
             "url": "//cdn.datatables.net/plug-ins/1.10.16/i18n/Spanish.json"
         }} );
+    });
+	</script>
+   
+     <script th:inline="javascript">
+       
     if([[${msg}]]===3){
        swal({
            
