--- a/src/main/resources/templates/fragments/capacitador/capacitadores.html
+++ b/src/main/resources/templates/fragments/capacitador/capacitadores.html
@@ -26,7 +26,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
    
     <div th:if="${not #lists.isEmpty(capacitadores)}">
         <!--<h3 align="center">Listado de Capacitadores</h3>-->
-         <table id="tablita" class="table table-striped table-bordered" style="width:100%" >
+       <table id="tablita" class="table table-striped table-bordered" >
             
             <thead>
             <tr>
@@ -44,7 +44,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                   <th>Celular</th>
                   <th>Email</th>
 <!--                  <th>Codigo Empleado</th>-->
-                  <th align="center">Acciones</th>
+                    <th></th><th></th><th></th>
             </tr>
             </thead>
             <tr th:each="capacitador : ${capacitadores}">
@@ -83,10 +83,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
   
   <script th:inline="javascript">
     $(document).ready(function () {
-            $('#tablita').DataTable( {
-        "language": {
-            "url": "//cdn.datatables.net/plug-ins/1.10.16/i18n/Spanish.json"
-        }} );
+        
     if([[${msg}]]===0){
        swal({
                 title: "Exito!",
@@ -108,7 +105,14 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
     }
     });
 </script> 
-
+ <script th:inline="javascript">
+      $(document).ready(function () {
+            $('#tablita').DataTable( {
+        "language": {
+            "url": "//cdn.datatables.net/plug-ins/1.10.16/i18n/Spanish.json"
+        }} );
+    });
+	</script>
  <script th:inline="javascript">
         $(document).ready(function () {
     if([[${msg}]]===3){
