--- a/src/main/resources/templates/fragments/comite/comites.html
+++ b/src/main/resources/templates/fragments/comite/comites.html
@@ -24,7 +24,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
           <div class="row text-center">
                         <img src="../../static/image/roles.png" width="150" th:src="@{/image/roles.png}"/>
                     <h3 align="center">Listado de Comites</h3>
-                    <table id="tablita" class="table table-striped table-bordered" style="width:100%" >
+                    <table id="tablita" class="table table-striped table-bordered" >
              <thead> 
                         <tr>
                              <th>Código</th>
@@ -36,7 +36,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                             <th>Fecha Deesde</th>
                             <th>Fecha Hasta</th>
                             
-                            <th>Acciones</th>
+                            <th></th><th></th><th></th>
 
                         </tr>
              </thead>
@@ -79,10 +79,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 
 <script th:inline="javascript">
     $(document).ready(function () {
-            $('#tablita').DataTable( {
-        "language": {
-            "url": "//cdn.datatables.net/plug-ins/1.10.16/i18n/Spanish.json"
-        }} );
+           
     if([[${msg}]]===0){
        swal({
                 title: "Exito!",
@@ -104,7 +101,14 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
     }
     });
 </script> 
-
+ <script th:inline="javascript">
+      $(document).ready(function () {
+            $('#tablita').DataTable( {
+        "language": {
+            "url": "//cdn.datatables.net/plug-ins/1.10.16/i18n/Spanish.json"
+        }} );
+    });
+	</script>
  <script th:inline="javascript">
         $(document).ready(function () {
     if([[${msg}]]===3){
