--- a/src/main/resources/templates/fragments/diagnosticocapacitacion/diagnosticocapacitaciones.html
+++ b/src/main/resources/templates/fragments/diagnosticocapacitacion/diagnosticocapacitaciones.html
@@ -32,7 +32,7 @@
                             <th>Resultado que desea Obtener</th>
                             <th>Nombre de quien Autoriza</th>
                             <th>Cargo de quien Autoriza</th>-->
-                            <th>Acciones</th>
+                            <th></th><th></th><th></th>
                         </tr>
                         </thead>
                         <tr th:each="diagnosticocapacitacion : ${diagnosticocapacitaciones}">
@@ -63,12 +63,17 @@
     </div>
 <!--</div>-->
 <script th:inline="javascript">
-    
-       $(document).ready(function () {
+      $(document).ready(function () {
             $('#tablita').DataTable( {
         "language": {
             "url": "//cdn.datatables.net/plug-ins/1.10.16/i18n/Spanish.json"
         }} );
+    });
+	</script>
+<script th:inline="javascript">
+    
+       $(document).ready(function () {
+            
     if ([[${msg}]] === 0){
     swal({
     title: "Exito!",
