--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -234,14 +234,18 @@
                                 
                                
                                 
-                                  <li class="dropdown">
+                                <li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Estados<span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
 					<ul class="dropdown-menu forAnimate" role="menu">
 						<li><a href="#" th:href="@{/estados/}">Consultar Estados</a></li>
                                                 <li><a href="#" th:href="@{/estados/new/estado}">Crear Estado</a></li>
-                                                
-                                                  
-					</ul>
+                                        </ul>
+				</li>
+                                <li class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Bitacora<span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
+					<ul class="dropdown-menu forAnimate" role="menu">
+						<li><a href="#" th:href="@{/bitacoras/}">Consultar Bitacora</a></li>
+                                        </ul>
 				</li>
                                   <li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Reportes<span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
@@ -280,8 +284,6 @@
                                                 <li><a href="#" th:href="@{/otherreports/reporte/pensionadoreporte}">Reporte de Personal Pensionado</a></li>
                                                 <li><a href="#" th:href="@{/otherreports/reporte/exoneradoreporte}">Reporte de Personal Exonerado  <br>  de Marcacion</a></li>
                                                 <li><a href="#" th:href="@{/otherreports/reporte/nivelesreporte}">Reporte de Niveles Escolares</a></li>
-                                                
-                                                
                                                   
 					</ul>
 				</li>
